// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing - android 1`] = `
<Component
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <DeckWriteBody />
  </View>
</Component>
`;

exports[`renders without crashing 1`] = `
<Component
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <KeyboardAvoidingView
    behavior="padding"
    keyboardVerticalOffset={0}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <DeckWriteBody />
  </KeyboardAvoidingView>
</Component>
`;
